<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AppActivity"
    android:id="@+id/relativeLayout"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/layoutprofile"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/appetizers"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profImgBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/prof" />

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/r_name"
                android:textColor="#fff"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <LinearLayout
                    android:id="@+id/layoutEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/lname"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_email_black"/>
                        <TextView
                            android:id="@+id/emailTv"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_email"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lphone"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_smartphone_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/phoneTv"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_phone"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lAddress"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_home_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/addressTv"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_address"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_info_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/descriptionTv"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_description"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_access_time_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/openhoursTv"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_openhours"/>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/editButton"
                        android:layout_below="@+id/layoutInfo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="300dp"
                        android:src="@drawable/ic_edit_black_24dp"/>

                </LinearLayout>

            </TableLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>