<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/layoutprofile"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/appetizers"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/profImgBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:src="@drawable/prof" />

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/r_name"
                android:textColor="#fff"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <LinearLayout
                    android:id="@+id/layoutEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lname"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:paddingTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_email_black"/>
                        <EditText
                            android:id="@+id/emailTxt"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_email"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lphone"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_smartphone_black_24dp"/>
                        <EditText
                            android:textStyle="bold"
                            android:id="@+id/phoneTxt"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_phone"
                            android:inputType="number"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lAddress"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_home_black_24dp"/>
                        <EditText
                            android:textStyle="bold"
                            android:id="@+id/addressTxt"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_address"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_info_black_24dp"/>
                        <EditText
                            android:textStyle="bold"
                            android:id="@+id/descriptionTxt"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/r_description"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/openhoursLayout"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_access_time_black_24dp"/>

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/editButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/backgroundstylewithgradient"
                        android:text="Update Profile"
                        android:textColor="#fff" />
                </LinearLayout>

            </TableLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
